// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > renders 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_af3470"
    >
      <div
        class="_inline-field-control_af3470"
      >
        <div
          class="_container_d9763f"
        >
          <input
            class="_input_d9763f"
            id="«r0»"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_d9763f"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_af3470"
      >
        <label
          class="_label_af3470"
          for="«r0»"
        >
          Simple setting
        </label>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Toggle > renders with a help message 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_af3470"
    >
      <div
        class="_inline-field-control_af3470"
      >
        <div
          class="_container_d9763f"
        >
          <input
            class="_input_d9763f"
            id="«r2»"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_d9763f"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_af3470"
      >
        <label
          class="_label_af3470"
          for="«r2»"
        >
          Simple setting
        </label>
        <span
          class="_message_af3470 _help-message_af3470"
          id="radix-«r4»"
        >
          A simple setting to control things
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`renders with a disabled message (disabled=false) 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_af3470"
    >
      <div
        class="_inline-field-control_af3470"
      >
        <div
          class="_container_d9763f"
        >
          <input
            class="_input_d9763f"
            id="«r9»"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_d9763f"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_af3470"
      >
        <label
          class="_label_af3470"
          for="«r9»"
        >
          Simple setting
        </label>
        <span
          class="_message_af3470 _help-message_af3470"
          id="radix-«rb»"
        >
          A simple setting to control things
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`renders with a disabled message (disabled=true) 1`] = `
<DocumentFragment>
  <form>
    <div
      class="_inline-field_af3470"
    >
      <div
        class="_inline-field-control_af3470"
      >
        <div
          class="_container_d9763f"
        >
          <input
            class="_input_d9763f"
            disabled=""
            id="«r5»"
            role="switch"
            type="checkbox"
          />
          <div
            class="_ui_d9763f"
          />
        </div>
      </div>
      <div
        class="_inline-field-body_af3470"
      >
        <label
          class="_label_af3470"
          for="«r5»"
        >
          Simple setting
        </label>
        <span
          class="_message_af3470 _help-message_af3470"
          id="radix-«r7»"
        >
          A simple setting to control things
        </span>
        <span
          class="_message_af3470 _help-message_af3470"
          id="radix-«r8»"
        >
          This is disabled.
        </span>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
